[package]
name = "crystalfarm"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3", features = ["bevy_mesh_picking_backend"] }
bevy_panorbit_camera = "0.33.0"
bevy_hanabi = { version = "0.17", default-features = false, features = ["3d"] }
# bevy = "0.17.3"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3E